Cleanup RenderMediaControls.cpp and RenderMediaControlElements.cpp https://bugs.webkit.org/show_bug.cgi?id=209008

Reviewed by Daniel Bates.

Source/WebCore:

Merge RenderMediaControls.[h|cpp] and RenderMediaControlElements.[h|cpp].
Remove class RenderMediaVolumeSliderContainer because we can use RenderBlockFlow
to render MediaControlTextTrackContainerElement.

No new tests, no functional change.

* Sources.txt:
* WebCore.xcodeproj/project.pbxproj:
* html/shadow/MediaControlElementTypes.cpp:
* html/shadow/MediaControlElements.cpp:
(WebCore::MediaControlTextTrackContainerElement::createElementRenderer):
* rendering/RenderMediaControlElements.cpp: Removed.
* rendering/RenderMediaControlElements.h: Removed.
* rendering/RenderMediaControls.cpp:
(WebCore::RenderMediaVolumeSliderContainer::RenderMediaVolumeSliderContainer):
(WebCore::RenderMediaVolumeSliderContainer::layout):
(WebCore::RenderMediaControlTimelineContainer::RenderMediaControlTimelineContainer):
(WebCore::RenderMediaControlTimelineContainer::layout):
* rendering/RenderMediaControls.h:
* rendering/RenderThemeMac.mm:

LayoutTests:

Remove unused code in a test.

* media/track/track-cue-rendering-rtl.html:


Canonical link: https://commits.webkit.org/222014@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@258469 268f45cc-cd09-0410-ab3c-d52691b4dbfc